[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/GUI_Town.gd" type="Script" id=1]

[node name="GUI_Town" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="."]
margin_left = 53.7573
margin_top = 48.0558
margin_right = 139.757
margin_bottom = 113.056
text = "SHOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Road1Button" type="Button" parent="."]
margin_left = 53.7883
margin_top = 151.259
margin_right = 139.788
margin_bottom = 216.259
text = "Road 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Road2Button" type="Button" parent="."]
margin_left = 56.4322
margin_top = 251.336
margin_right = 142.432
margin_bottom = 316.336
text = "Road 2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="Road1Button" to="." method="_on_Road1Button_pressed"]
[connection signal="pressed" from="Road2Button" to="." method="_on_Road2Button_pressed"]
